Fixed sonar code smells.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>
Signed-off-by: Pascal Wilbrink <pascal.wilbrink@alliander.com>